# iCIBA

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  README_ZH.md  vcpkg-configuration.json  vcpkg.json
debian/: README  control  control.22.04  copyright  rules  rules.22.04
package/: CMakeLists.txt
src/: CMakeLists.txt  config.h.in  config.hpp.in  core.cpp  core.hpp  main.cpp  network.cpp  network.h  network.hpp
src/cli/: CMakeLists.txt  assets.qrc  core.cpp  core.h  main.cpp
src/cli/i18n/: iciba_zh_CN.qm  iciba_zh_CN.ts
src/errors/: systemerror.h  systemerror.hpp
src/gui/: CMakeLists.txt  assets.qrc  core.cpp  core.h  main.cpp
src/gui/i18n/: iciba_zh_CN.qm  iciba_zh_CN.ts
src/gui/widgets/: historydialog.cpp  historydialog.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  translatesentence.cpp  translatesentence.h  translatesentence.ui  translateword.cpp  translateword.h  translateword.ui  tray.cpp  tray.h
src/models/: sentenceresult.h  sentenceresult.hpp  wordresult.h  wordresult.hpp
src/persistence/: history.cpp  history.h  settings.cpp  settings.h
src/utils/: autostartup.cpp  autostartup.h  baseprint.cpp  baseprint.h  baseprint.hpp  htmlprint.cpp  htmlprint.h  path.cpp  path.h  terminalprint.cpp  terminalprint.h  terminalprint.hpp
test/: CMakeLists.txt
