set(CPACK_PACKAGE_DESCRIPTION "iCIBA")
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "iCIBA")
set(CPACK_PACKAGE_VERSION_MAJOR ${PROJECT_VERSION_MAJOR})
set(CPACK_PACKAGE_VERSION_MINOR ${PROJECT_VERSION_MINOR})
set(CPACK_PACKAGE_VERSION_PATCH ${PROJECT_VERSION_PATCH})

if(UNIX AND NOT APPLE)
    set(CPACK_GENERATOR "DEB")
    set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Taipa Xu <taipaxu@gmail.com>")

    set(CPACK_DEBIAN_PACKAGE_DEPENDS "libqt6core6 (>= 6.0), libqt6network6 (>= 6.0)")

    set(CPACK_PACKAGE_FILE_NAME "${CMAKE_PROJECT_NAME}_${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}")

    install(TARGETS iciba
        RUNTIME DESTINATION bin
    )
endif()


include(CPack)
